Registro de empréstimo.

--- a/web/menu.xhtml
+++ b/web/menu.xhtml
@@ -9,9 +9,11 @@
     </h:head>
     <h:body>
         <h:form>
+            <h:link outcome="index" value="Sair" />
+            <p/>
             <h:link outcome="usuario/usuarioGerenciar" value="Gerenciar usuários"/>
             <p/>
-            <h:link  value="Gerenciar veículos"/>
+            <h:link outcome="veiculo/veiculoGerenciar" value="Gerenciar veículos"/>
         </h:form>
     </h:body>
 </html>
