--- a/web/menu.xhtml
+++ b/web/menu.xhtml
@@ -1,19 +1,20 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
-    <h:head>
-        <title>Menu</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </h:head>
-    <h:body>
-        <h:form>
-            <h:link outcome="index" value="Sair" />
-            <p/>
-            <h:link outcome="usuario/usuarioGerenciar" value="Gerenciar usuários"/>
-            <p/>
-            <h:link outcome="veiculo/veiculoGerenciar" value="Gerenciar veículos"/>
-        </h:form>
-    </h:body>
+    <ui:composition template="template.xhtml">
+        <ui:define name="body">
+            <h:form>
+                <p:outputPanel style="width: 100%; text-align: right" >
+                    <h:commandLink value="sair" action="index" />
+                    <br/>
+                    <p:separator/>
+                </p:outputPanel>
+                <p/>
+                <h:link outcome="usuario/usuarioGerenciar" value="Gerenciar usuários"/>
+                <p/>
+                <h:link outcome="veiculo/veiculoGerenciar" value="Gerenciar veículos"/>
+            </h:form>
+        </ui:define>
+    </ui:composition>
 </html>
